syntax = "proto3";

package NAlice.NIoT;

option go_package = "a.yandex-team.ru/alice/iot/bulbasaur/protos";

import "alice/iot/bulbasaur/protos/capability.proto";
import "alice/iot/bulbasaur/protos/device_type.proto";
import "alice/iot/bulbasaur/protos/group.proto";
import "alice/iot/bulbasaur/protos/property.proto";
import "alice/iot/bulbasaur/protos/room.proto";
import "alice/iot/bulbasaur/protos/sharing.proto";

message Device {
    string Id = 1;
    string Name = 2;
    string Description = 3;
    string ExternalId = 4;
    string ExternalName = 5;
    string SkillId = 6;
    DeviceType Type = 7;
    DeviceType OriginalType = 8;
    Room Room = 9;
    repeated Group Groups = 10;
    repeated Capability Capabilities = 11;
    repeated Property Properties = 12;
    DeviceInfo DeviceInfo = 13;
    bytes CustomData = 14;
    double Updated = 15;
    SharingInfo Sharing = 16;
}

message DeviceInfo {
    string Manufacturer = 1;
    string Model = 2;
    string HwVersion = 3;
    string SwVersion = 4;
}
